@@ -1,5 +1,9 @@
 2005-05-09  Sam Steingold  <sds@gnu.org>
 
+	* pathname.d (ENOUGH-NAMESTRING): fixed for possible NIL directory
+
+2005-05-09  Sam Steingold  <sds@gnu.org>
+
 	* init.lisp (load): bind *LOAD-PATHNAME* to the result of
 	MERGE-PATHNAMES as per ANSI CL spec
 	Found by Paul Dietz's ansi-tests test suite.
